--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "IBM Plex Sans KR", sans-serif;
+  font-family: "Gothic A1", sans-serif;
 }
 
 body {
@@ -13,6 +13,9 @@ body {
 
 img {
   vertical-align: middle;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 button {
